Skip to content

MKV: Support TimecodeScale for subtitles tracks.

As requested in: http://forum.videolan.org/viewtopic.php?f=14&t=58467#p195522

Some Matroska files include subtitles which use TimecodeScale other than default one. And VLC cannot calculate duration/end time of those subtitles correctly because the TimecodeScale isn't used in calculations properly.

Sample file showing the issue: http://www.sendspace.com/file/nmgkoa

According to the original poster, the subtitles should show only for 2 seconds, but they stay on screen for 40 seconds.

Tested under Win32 using VLC 1.0.0-pre1-20090406-2206.

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information