Use timecodescale to compute subtitle duration

Fix #2702

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>